<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.levien.synthesizer"
    android:id="@+id/TableLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="*"
    android:shrinkColumns="*">
  <TableRow>
    <TextView
        android:text="@string/attack"
        android:id="@+id/attackLabel"
        android:gravity="center_horizontal" />
    <TextView
        android:text="@string/decay"
        android:id="@+id/decayLabel"
        android:gravity="center_horizontal" />
    <TextView
        android:text="@string/sustain"
        android:id="@+id/sustainLabel"
        android:gravity="center_horizontal" />
    <TextView
        android:text="@string/release"
        android:id="@+id/releaseLabel"
        android:gravity="center_horizontal" />
    <TextView
        android:text=""
        android:id="@+id/emptyLabel"
        android:gravity="center_horizontal" />
    <TextView
        android:text="@string/volume"
        android:id="@+id/volumeLabel"
        android:gravity="center_horizontal" />
  </TableRow>
  <TableRow>
    <com.levien.synthesizer.android.widgets.knob.KnobView
        android:id="@+id/attackKnob"
        app:value="0.0"
        app:max="5"
        android:layout_margin="2px" />
    <com.levien.synthesizer.android.widgets.knob.KnobView
        android:id="@+id/decayKnob"
        app:value="0.0"
        app:max="5"
        android:layout_margin="2px" />
    <com.levien.synthesizer.android.widgets.knob.KnobView
        android:id="@+id/sustainKnob"
        app:value="1.0"
        app:max="1"
        android:layout_margin="2px" />
    <com.levien.synthesizer.android.widgets.knob.KnobView
        android:id="@+id/releaseKnob"
        app:value="0.0"
        app:max="5"
        android:layout_margin="2px" />
    <com.levien.synthesizer.android.widgets.knob.KnobPlaceholderView
        android:id="@+id/emptyKnob"
        android:layout_margin="2px" />
    <com.levien.synthesizer.android.widgets.knob.KnobView
        android:id="@+id/volumeKnob"
        app:value="1.0"
        app:min="0.0"
        app:max="25.0"
        android:layout_margin="2px" />
  </TableRow>
  <TableRow>
    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_span="6"
        android:orientation="vertical">
      <com.levien.synthesizer.android.widgets.piano.PianoView
          android:id="@+id/piano"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          app:octaves="2"
          app:first_octave="4"/>
    </LinearLayout>
  </TableRow>
</TableLayout>
