<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.levien.synthesizer"
    android:id="@+id/TableLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="*"
    android:shrinkColumns="*">
  <TableRow>
    <TextView
        android:text="@string/glide"
        android:id="@+id/glideLabel"
        android:gravity="center_horizontal" />
    <TextView
        android:text="@string/coarse"
        android:id="@+id/coarseLabel"
        android:gravity="center_horizontal" />
    <TextView
        android:text="@string/fine"
        android:id="@+id/fineLabel"
        android:gravity="center_horizontal" />
    <TextView
        android:text="@string/vibrato_depth"
        android:id="@+id/releaseLabel"
        android:gravity="center_horizontal" />
    <TextView
        android:text=""
        android:id="@+id/empty1Label"
        android:gravity="center_horizontal" />
    <TextView
        android:text="@string/balance"
        android:id="@+id/balanceLabel"
        android:gravity="center_horizontal" />
  </TableRow>
  <TableRow>
    <com.levien.synthesizer.android.widgets.knob.KnobView
        android:id="@+id/glideKnob"
        app:value="0.0"
        app:min="0"
        app:max="1"
        android:layout_margin="2px" />
    <com.levien.synthesizer.android.widgets.knob.KnobView
        android:id="@+id/coarseKnob"
        app:value="0.0"
        app:min="-1.0"
        app:max="1.0"
        android:layout_margin="2px" />
    <com.levien.synthesizer.android.widgets.knob.KnobView
        android:id="@+id/fineKnob"
        app:value="0.0"
        app:min="-0.0833333333"
        app:max="0.0833333333"
        android:layout_margin="2px" />
    <com.levien.synthesizer.android.widgets.knob.KnobView
        android:id="@+id/vibratoDepthKnob"
        app:value="0"
        app:min="0"
        app:max="0.1666666667"
        android:layout_margin="2px" />
    <com.levien.synthesizer.android.widgets.knob.KnobPlaceholderView
        android:id="@+id/empty1Knob"
        android:layout_margin="2px" />
    <com.levien.synthesizer.android.widgets.knob.KnobView
        android:id="@+id/balanceKnob"
        app:value="0"
        app:min="0"
        app:max="1"
        android:layout_margin="2px" />
  </TableRow>
  <TableRow>
    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_span="6"
        android:orientation="vertical">
      <com.levien.synthesizer.android.widgets.waveform.WaveformRowView
          android:id="@+id/waveform"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1" />
      <com.levien.synthesizer.android.widgets.piano.PianoView
          android:id="@+id/piano"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          app:octaves="2"
          app:first_octave="4" />
    </LinearLayout>
  </TableRow>
</TableLayout>
