<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.levien.synthesizer"
    android:id="@+id/TableLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="*"
    android:shrinkColumns="*">
  <TableRow>
    <TextView
        android:text="@string/blend"
        android:id="@+id/blendLabel"
        android:gravity="center_horizontal" />
    <TextView
        android:text="@string/stretch"
        android:id="@+id/stretchLabel"
        android:gravity="center_horizontal" />
    <TextView
        android:text="@string/excitement"
        android:id="@+id/excitementLabel"
        android:gravity="center_horizontal" />
    <TextView
        android:text=""
        android:id="@+id/empty1Label"
        android:gravity="center_horizontal" />
    <TextView
        android:text=""
        android:id="@+id/empty2Label"
        android:gravity="center_horizontal" />
    <TextView
        android:text=""
        android:id="@+id/empty3Label"
        android:gravity="center_horizontal" />
  </TableRow>
  <TableRow>
    <com.levien.synthesizer.android.widgets.knob.KnobView
        android:id="@+id/blendKnob"
        app:value="0.0"
        app:min="0"
        app:max="1"
        android:layout_margin="2px" />
    <com.levien.synthesizer.android.widgets.knob.KnobView
        android:id="@+id/stretchKnob"
        app:value="0.0"
        app:min="0"
        app:max="1"
        android:layout_margin="2px" />
    <com.levien.synthesizer.android.widgets.knob.KnobView
        android:id="@+id/excitementKnob"
        app:value="0.0"
        app:min="0"
        app:max="1"
        android:layout_margin="2px" />
    <com.levien.synthesizer.android.widgets.knob.KnobPlaceholderView
        android:id="@+id/empty1Knob"
        android:layout_margin="2px" />
    <com.levien.synthesizer.android.widgets.knob.KnobPlaceholderView
        android:id="@+id/empty2Knob"
        android:layout_margin="2px" />
    <com.levien.synthesizer.android.widgets.knob.KnobPlaceholderView
        android:id="@+id/empty3Knob"
        android:layout_margin="2px" />
  </TableRow>
  <TableRow>
    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_span="6"
        android:orientation="vertical">
      <com.levien.synthesizer.android.widgets.piano.PianoView
          android:id="@+id/piano"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          app:octaves="2"
          app:first_octave="4" />
    </LinearLayout>
  </TableRow>
</TableLayout>
